tests/baselines/reference/parserComputedPropertyName22.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName22.ts(2,5): error TS1166: Computed property names are not allowed in class property declarations.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName22.ts(2,6): error TS2304: Cannot find name 'e'.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName22.ts (2 errors) ====
    declare class C {
        [e]: number 
        ~~~
!!! error TS1166: Computed property names are not allowed in class property declarations.
         ~
!!! error TS2304: Cannot find name 'e'.
    }